show weather to the user

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
         <div id="result">
             <h2>New York</h2>
             <p class="weather">Clear </p>
-            <p class="desc">Clear sky</p>
+            <p class="humidity">Clear sky</p>
             <img src="https://cdn.weatherapi.com/weather/64x64/day/113.png" alt="">
             <h1>22.33 &deg;</h1>
-            <div class="temp-container">
+            <div class="wind-container">
                 <div>
-                    <p class="title">min</p>
-                    <p class=" min_temp temp">22.5&deg;</p>
+                    <p class="title">wind dir</p>
+                    <p class=" wind_direction wind">22.5&deg;</p>
                 </div>
                 <div>
-                    <p class="title">max</p>
-                    <p class=" max_temp temp">22.5&deg;</p>
+                    <p class="title">wind kph</p>
+                    <p class=" wind_speed wind">22.5&deg;</p>
                 </div>
             </div>
         </div>
